package Decorateur.Coffee;

// Decorator WithMilk mixes milk into coffee.
// Note it extends CoffeeDecorator.
public class WithMilk extends CoffeeDecorator {
    public WithMilk(ICoffee iCoffee) {
        super(iCoffee);
    }

    // @Override
    public Double getCost() { // Overriding methods defined in the abstract superclass
        return super.getCost() + 0.5;
    } 

    // @Override
    public String getDescription() {
        return super.getDescription() + ", with milk";
    }
}