package Decorateur.Patate;

public interface IPatate extends Decorateur.Repas.IRepas {
    public Double getCost(); 
    public String getDescription(); 
}