package Decorateur.Repas;

public interface IRepas {
	public String getDescription(); 
	public Double getCost();
}