@startuml Diagramme de classe
abstract class Decorateur.Coffee.CoffeeDecorator
class Decorateur.Coffee.SimpleCoffee
class Decorateur.Coffee.WithMilk
class Decorateur.Coffee.WithSprinkles
class Decorateur.Patate.Fromage
class Decorateur.Patate.Patate
class Decorateur.Patate.PatateDecorator
class Decorateur.Patate.Sauce
class Decorateur.Pizza.Mozzarella
class Decorateur.Pizza.PizzaDecorator
class Decorateur.Pizza.PizzaTopping
class Decorateur.Pizza.PlainPizza
class Decorateur.Pizza.ThreeCheesePizza
class Decorateur.Pizza.TomatoSauce
class Decorateur.Repas.Repas
class java.util.ArrayList
class java.util.Iterator
class java.util.List
interface Decorateur.Coffee.ICoffee{
    getCost(): Double
    getDescription(): Double
}
interface Decorateur.Patate.IPatate{
    getCost(): Double
    getDescription(): Double
}
interface Decorateur.Pizza.IPizza{
    getCost(): Double
    getDescription(): Double
}
interface Decorateur.Repas.IRepas{
    getCost(): Double
    getDescription(): Double
}
Decorateur.Coffee.CoffeeDecorator ..|> Decorateur.Coffee.ICoffee
Decorateur.Coffee.SimpleCoffee ..|> Decorateur.Coffee.ICoffee
Decorateur.Coffee.WithMilk --|> Decorateur.Coffee.CoffeeDecorator
Decorateur.Coffee.WithSprinkles --|> Decorateur.Coffee.CoffeeDecorator
Decorateur.Patate.Fromage --|> Decorateur.Patate.PatateDecorator
Decorateur.Patate.Patate ..|> Decorateur.Patate.IPatate
Decorateur.Patate.PatateDecorator ..|> Decorateur.Patate.IPatate
Decorateur.Patate.Sauce --|> Decorateur.Patate.PatateDecorator
Decorateur.Pizza.Mozzarella --|> Decorateur.Pizza.PizzaDecorator
Decorateur.Pizza.PizzaDecorator ..|> Decorateur.Pizza.IPizza
Decorateur.Pizza.PizzaTopping --|> Decorateur.Pizza.PizzaDecorator
Decorateur.Pizza.PlainPizza ..|> Decorateur.Pizza.IPizza
Decorateur.Pizza.ThreeCheesePizza ..|> Decorateur.Pizza.IPizza
Decorateur.Pizza.TomatoSauce --|> Decorateur.Pizza.PizzaDecorator
Decorateur.Repas.Repas ..> java.util.ArrayList
Decorateur.Repas.Repas ..> java.util.Iterator
Decorateur.Repas.Repas ..> java.util.List
Decorateur.Coffee.ICoffee --|> Decorateur.Repas.IRepas
Decorateur.Patate.IPatate --|> Decorateur.Repas.IRepas
Decorateur.Pizza.IPizza --|> Decorateur.Repas.IRepas

Decorateur.Repas.Repas -u-> "*" Decorateur.Repas.IRepas
Decorateur.Coffee.CoffeeDecorator --> Decorateur.Coffee.ICoffee
Decorateur.Patate.PatateDecorator --> Decorateur.Patate.IPatate
Decorateur.Pizza.PizzaDecorator --> Decorateur.Pizza.IPizza

@enduml